[project]
name = "finetunning-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.10.1",
    "cursor-notebook-mcp>=0.3.1",
    "datasets>=4.1.1",
    "huggingface-hub>=0.35.3",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "notebook>=7.4.7",
    "peft>=0.17.1",
    "tensorboard>=2.20.0",
    "torch>=2.8.0",
    "transformers>=4.55.0",
    "trl>=0.22.1",
    "wandb>=0.22.2",
]
